# pybary

./: .coveragerc  .pre-commit-config.yaml  Justfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/workflows/: check-lint.yaml  update-coverage.yaml
examples/: example.ipynb  example.py  work_in_progress.ipynb
pybary/: __init__.py  pybary.py  utils.py
tests/: __init__.py  conftest.py  test_pybary.py
