[tool.poetry]
name = "pybary"
version = "0.1.0"
description = "Barycenter method in python"
authors = ["Bruno Peixoto <brunolnetto@gmail.com>"]
license = "MIT license"
readme = "README.md"
packages = [{include = "pybary"}]
homepage = "https://pypi.org/project/pybary/"
repository = "https://github.com/asmove/pybary"
keywords = ["optimization", "discrete"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
scipy = "^1.10.0"
numpy = "1.19.5"
ipython = "^8.8.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
types-mock = "^4.0.15.2"
pygments = "^2.14.0"
docutils = "^0.19"
watchdog = "^2.2.0"
coverage = "^7.0"
tox = "^4.0.19"
ruff = "^0.0.209"
pre-commit = "^2.20.0"
black = "^22.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-watch = "^4.2.0"
pylint = "^2.15.9"

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
