[tool.poetry]
name = "pybary"
version = "0.2.2"
description = "Barycenter method in python"
authors = ["Bruno Peixoto <brunolnetto@gmail.com>"]
license = "MIT license"
readme = "README.md"
packages = [{include = "pybary"}]
homepage = "https://pypi.org/project/pybary/"
repository = "https://github.com/asmove/pybary"
keywords = ["optimization", "discrete"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "1.24.1"

[tool.poetry.group.dev.dependencies]
docutils = "^0.19"
coverage = "^7.0"
tox = "^4.0.19"
ruff = "^0.0.209"
pre-commit = "^2.20.0"
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
pytest = "^7.2.0"
pytest-watch = "^4.2.0"
pylint = "^2.15.9"

[tool.ruff]
line-length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = [
    "D203", "E203", "E251", "E266", 
    "E302", "E305", "E401", "E402", 
    "E501", "F401", "F403", "W503"]
exclude = [".git", "__pycache__", "dist"]
max-complexity = 10

[tool.isort]
atomic = true
profile = "black"
line_length = 100
skip_gitignore = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
